--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-screens": "~2.15.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
