--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@iconify-icons/fa-solid": "^1.1.1",
+    "@iconify/react": "^1.1.4",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.13.1"
