--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "*",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
