changed app.j, legalbuttns, legalcard, and screens

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "jest": "~25.2.6",
     "react-test-renderer": "~16.13.1"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "jest": {
     "preset": "react-native"
   },
