--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-native-elements": "^3.3.2",
+    "react-native-elements": "^3.4.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.2",
+    "react-native-screens": "~2.15.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "*",
     "react-native-svg-transformer": "^0.14.3",
