--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-elements": "^3.4.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.3",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-snap-carousel": "^3.9.1",
