--- a/ios/CFGI/Info.plist
+++ b/ios/CFGI/Info.plist
@@ -74,6 +74,9 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>Righteous-Regular.ttf</string>
+		<string>Oxygen-Bold.ttf</string>
+		<string>Oxygen-Light.ttf</string>
+		<string>Oxygen-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
