--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "^0.63.4",
     "react-native-dropdown-picker": "^5.1.5",
     "react-native-elements": "^3.4.0",
     "react-native-gesture-handler": "^1.8.0",
